updated copy/fixed nav spacing

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ header nav ul {
 }
 
 header nav ul li a {
-  padding: 10ox 15px;
+  padding: 10px 15px;
   font-weight: lighter;
   font-size: 1.5vw;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
